--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,24 @@
 body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding-bottom: 20px;
 }
-/* #all-products {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  text-align: center;
-  width: 100%;
-  
-  align-items: center;
-  justify-content: center;
-  
-} */
+/* card */
 .single-product {
-  
+  height: 520px;
   transition: 0.6s;
   background-color: rgb(241, 236, 236);
-  border-radius: 20px;
-  height: 520px;
+  border-radius: 10px;
+  
 }
+/* card hover  */
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
   border-radius: 10px;
   border: 1px solid rgb(80, 126, 126);
 }
+/* product image  */
 .product-image {
   width: 200px;
   height: 150px;
