--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 }
 /* card */
 .single-product {
-  height: 520px;
+  height: 480px;
   transition: 0.6s;
   background-color: rgb(241, 236, 236);
   border-radius: 10px;
@@ -20,8 +20,8 @@ body {
 }
 /* product image  */
 .product-image {
-  width: 200px;
-  height: 150px;
+  width: 180px;
+  height: 180px;
   border-radius: 20px;
 
 }
@@ -54,10 +54,16 @@ body {
   .cart-main {
     padding-right: 10px;
   }
-}
+} 
 @media only screen and (max-width: 468px) {
   #all-products {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
   }
+  .cart{
+    margin: 20px auto;
+    position: relative;
+    
+  }
+  
 }
